# AOC2025

./: .clang-format  .gitignore  CMakeLists.txt  README.md
docs/: CMakeLists.txt  DoxyMainPage.hpp  Doxyfile.template
src/: CMakeLists.txt
src/Day1/: CMakeLists.txt  Dialpad.cpp  Dialpad.hpp  InputReader.cpp  InputReader.hpp  Rotation.hpp  Utility.hpp  main.cpp
src/Day2/: CMakeLists.txt  InputReader.cpp  InputReader.hpp  ProductId.cpp  ProductId.hpp  Range.cpp  Range.hpp  Utility.hpp  main.cpp
utils/: support.py  utils.py
